--- a/lesson2_1.ipynb
+++ b/lesson2_1.ipynb
@@ -16,6 +16,25 @@
    "source": [
     "print('hello!python!')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 3\n",
+    "y = 4\n",
+    "print(x+y)"
+   ]
   }
  ],
  "metadata": {
