--- a/lesson3/lesson3_1.ipynb
+++ b/lesson3/lesson3_1.ipynb
@@ -16,6 +16,51 @@
    "source": [
     "print (\"hello! python!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = input('請輸入整數') \n",
+    "#檢查型別\n",
+    "type(n)\n",
+    "\n",
+    "int(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n= 5\n",
+      "m= 50.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('請輸入整數'))\n",
+    "m = float(input('請輸入浮點數:'))\n",
+    "print(\"n=\",n)\n",
+    "print(\"m=\",m)\n"
+   ]
   }
  ],
  "metadata": {
