--- a/lesson3/lesson3_1.ipynb
+++ b/lesson3/lesson3_1.ipynb
@@ -61,6 +61,27 @@
     "print(\"n=\",n)\n",
     "print(\"m=\",m)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n= 5 ,m= 50.8\n",
+      "n=5,m=50.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input('請輸入整數'))\n",
+    "m = float(input('請輸入浮點數:'))\n",
+    "print(\"n=\",n,\",m=\",m)\n",
+    "print(f\"n={n},m={m}\")  #字串插補(字串格式化的簡寫)"
+   ]
   }
  ],
  "metadata": {
