--- a/lesson3/lesson3_1.ipynb
+++ b/lesson3/lesson3_1.ipynb
@@ -82,6 +82,72 @@
     "print(\"n=\",n,\",m=\",m)\n",
     "print(f\"n={n},m={m}\")  #字串插補(字串格式化的簡寫)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n=5,m=50.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"n=5,m=50.8\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#字串插補\n",
+    "f'n={n},m={m}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PI=3.14\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 3.1415926\n",
+    "print(f'PI={x:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = eval(input('請輸入一個數值:')) #eval可以轉換為int或float\n",
+    "type(y)"
+   ]
   }
  ],
  "metadata": {
