--- a/lesson3/lesson3-2.ipynb
+++ b/lesson3/lesson3-2.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -61,6 +61,30 @@
    ],
    "source": [
     "math.pi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "姓名:tom\n",
+      "身高:180cm\n",
+      "體重:90kg\n",
+      "bmi:27.78\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=input('姓名:')\n",
+    "h=eval(input('身高:'))\n",
+    "w=eval(input('體重:'))\n",
+    "bmi=w/((h/100)**2)\n",
+    "print(f'姓名:{n}\\n身高:{h}cm\\n體重:{w}kg\\nbmi:{bmi:.2f}')"
    ]
   }
  ],
