--- a/lesson4/lesson4_1.ipynb
+++ b/lesson4/lesson4_1.ipynb
@@ -9,17 +9,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "身高:180,體重:80\n",
-      "BMI:24.69\n"
+      "斜邊:50,對邊:25\n",
+      "三角形的角度是30.00\n"
      ]
     }
    ],
    "source": [
-    "high=eval(input(\"身高cm\"))/100\n",
-    "weight=eval(input(\"體重kg\"))\n",
-    "bmi=weight/(high**2)\n",
-    "print(f\"身高:{high*100:.0f},體重:{weight}\")\n",
-    "print(f\"BMI:{bmi:.2f}\")\n"
+    "#求直角三角形的角度\n",
+    "import math\n",
+    "side = eval(input(\"請輸入斜邊:\"))\n",
+    "another = eval(input(\"請輸入對邊:\"))\n",
+    "radian = math.asin(another/side)\n",
+    "degree = math.degrees(radian)\n",
+    "\n",
+    "print(f'斜邊:{side},對邊:{another}')\n",
+    "print(f'三角形的角度是{degree:.2f}')"
    ]
   }
  ],
