--- a/lesson4/lesson4_1.ipynb
+++ b/lesson4/lesson4_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,6 +24,32 @@
     "\n",
     "print(f'斜邊:{side},對邊:{another}')\n",
     "print(f'三角形的角度是{degree:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.0\n",
+      "7.0\n",
+      "5.94418483337567\n",
+      "1.8257418583505538\n"
+     ]
+    }
+   ],
+   "source": [
+    "#大學數學\n",
+    "import statistics\n",
+    "print((0+5+9+14)/4)\n",
+    "print((5+6+8+9)/4)\n",
+    "\n",
+    "print(statistics.stdev([0, 5, 9, 14]))\n",
+    "print(statistics.stdev([5, 6, 8, 9]))"
    ]
   }
  ],
