--- a/lesson3/lesson3-2.ipynb
+++ b/lesson3/lesson3-2.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
     "h=eval(input('身高:'))\n",
     "w=eval(input('體重:'))\n",
     "bmi=w/((h/100)**2)\n",
-    "print(f'姓名:{n}\\n身高:{h}cm\\n體重:{w}kg\\nbmi:{bmi:.2f}')"
+    "print(f'姓名:{n}\\n身高:{h}cm\\n體重:{w}kg\\nbmi:{bmi:.2f}')\n"
    ]
   }
  ],
