--- a/lesson4/lesson4_2.ipynb
+++ b/lesson4/lesson4_2.ipynb
@@ -146,6 +146,29 @@
     "else:\n",
     "    print('輸入不在範圍內')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "#解決raise 錯誤的語法\n",
+    "#try...except:\n",
+    "try:\n",
+    "    money = eval(input(\"請輸入金額:\"))\n",
+    "    print(money)\n",
+    "except:\n",
+    "    print(\"輸入格式錯誤\")"
+   ]
   }
  ],
  "metadata": {
