--- a/lesson4/lesson4_2.ipynb
+++ b/lesson4/lesson4_2.ipynb
@@ -169,6 +169,31 @@
     "except:\n",
     "    print(\"輸入格式錯誤\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "輸入格式錯誤\n"
+     ]
+    }
+   ],
+   "source": [
+    "#解決raise 錯誤的語法\n",
+    "#try...except...else\n",
+    "try:\n",
+    "    money = eval(input(\"請輸入金額:\"))\n",
+    "    print(money)\n",
+    "except:\n",
+    "    print(\"輸入格式錯誤\")\n",
+    "else:\n",
+    "    print(\"程式沒有錯誤\")"
+   ]
   }
  ],
  "metadata": {
