--- a/lesson3/lesson3-2.ipynb
+++ b/lesson3/lesson3-2.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -75,16 +75,63 @@
       "姓名:tom\n",
       "身高:180cm\n",
       "體重:90kg\n",
-      "bmi:27.78\n"
+      "bmi:27.78\n",
+      "過度肥胖\n"
      ]
     }
    ],
    "source": [
-    "n=input('姓名:')\n",
+    "\n",
+    "n=(input('姓名:'))\n",
     "h=eval(input('身高:'))\n",
     "w=eval(input('體重:'))\n",
     "bmi=w/((h/100)**2)\n",
-    "print(f'姓名:{n}\\n身高:{h}cm\\n體重:{w}kg\\nbmi:{bmi:.2f}')\n"
+    "print(f'姓名:{n}\\n身高:{h}cm\\n體重:{w}kg\\nbmi:{bmi:.2f}')\n",
+    "if bmi < 18.5:\n",
+    "    print('過輕')\n",
+    "elif bmi >=18.5 and bmi < 24:\n",
+    "    print(\"健康\")\n",
+    "elif bmi >=24 and bmi < 27:\n",
+    "    print(\"過重\")\n",
+    "else:\n",
+    "    print(\"過度肥胖\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "你的bmi是46.296\n",
+      "重度肥胖\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    h=eval(input('身高:'))\n",
+    "    w=eval(input('體重:'))\n",
+    "    bmi=w/((h/100)**2)\n",
+    "    print(f'你的bmi是{bmi:.3f}')\n",
+    "    if bmi < 18.5:\n",
+    "        print('過輕')\n",
+    "    elif bmi >=18.5 and bmi < 24:\n",
+    "        print(\"健康\")\n",
+    "    elif bmi >=24 and bmi < 27:\n",
+    "        print(\"過重\")\n",
+    "    elif bmi >=27 and bmi <30:\n",
+    "        print('輕度肥胖')\n",
+    "    elif bmi >=30 and bmi <35:\n",
+    "        print(中度肥胖)\n",
+    "    else:\n",
+    "        print(\"重度肥胖\")\n",
+    "except:\n",
+    "    print(\"輸入格式錯誤\")"
    ]
   }
  ],
