--- a/lesson5/lesson5_0.ipynb
+++ b/lesson5/lesson5_0.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "你的bmi是30.556\n",
+      "中度肥胖\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    h=eval(input('身高:'))\n",
@@ -29,9 +38,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "您的BMI是:17.0\n",
+      "您的體重:過輕\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    height = eval(input(\"身高:\"))\n",
@@ -56,9 +74,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "您的BMI是:18.5\n",
+      "您的體重:正常範圍\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    height = eval(input(\"身高:\"))\n",
@@ -80,11 +107,32 @@
     "except:\n",
     "    print(\"格式錯誤\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
