--- a/lesson5/lesson5_1.ipynb
+++ b/lesson5/lesson5_1.ipynb
@@ -40,10 +40,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "加分\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 沒有not\n",
+    "add = input(\"請問是否加分(y,n):\")\n",
+    "if add == 'y':\n",
+    "    print(\"加分\")\n",
+    "else:\n",
+    "    print(\"不加分\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "加分\n"
+     ]
+    }
+   ],
+   "source": [
+    "# not\n",
+    "add = input(\"請問是否加分(y,n):\")\n",
+    "if not (add == 'y'):\n",
+    "    print(\"不加分\")\n",
+    "else:\n",
+    "    print(\"加分\")"
+   ]
   }
  ],
  "metadata": {
