--- a/lesson6/lesson6_2.ipynb
+++ b/lesson6/lesson6_2.ipynb
@@ -141,6 +141,27 @@
     "name = pyip.inputStr('請輸入姓名:',strip=' ') #混合呼叫,前面引數值的呼叫,依照參數的順序,後面可以使用引數名稱的呼叫\n",
     "name"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "請輸入數值:'10a' is not an integer.\n",
+      "請輸入數值:'10b' is not an integer.\n",
+      "請輸入數值:'10c' is not an integer.\n",
+      "請輸入數值:10\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_value = pyip.inputInt('請輸入數值:')\n",
+    "print(input_value)"
+   ]
   }
  ],
  "metadata": {
