--- a/lesson6/lesson6_2.ipynb
+++ b/lesson6/lesson6_2.ipynb
@@ -162,6 +162,28 @@
     "input_value = pyip.inputInt('請輸入數值:')\n",
     "print(input_value)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#產生亂數\n",
+    "import random\n",
+    "random.randint(5,10)"
+   ]
   }
  ],
  "metadata": {
