--- a/lesson7/lesson7_1.ipynb
+++ b/lesson7/lesson7_1.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! World!\n"
+     ]
+    }
+   ],
    "source": [
     "#自訂function\n",
     "#沒有參數\n",
@@ -19,9 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! Robert\n"
+     ]
+    }
+   ],
    "source": [
     "#自訂function\n",
     "#1個參數\n",
@@ -36,9 +52,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello robert again!\n"
+     ]
+    }
+   ],
    "source": [
     "#自訂function\n",
     "#1個參數\n",
@@ -50,11 +74,42 @@
     "message:str = hello_again(\"robert\")\n",
     "print(message)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def circle_area(radius:float) -> float:\n",
+    "    PI:float = 3.1415926\n",
+    "    return PI * radius ** 2\n",
+    "\n",
+    "area:float = circle_area(radius=100)\n",
+    "print(f\"圓面積是:{area:.2f}\")\n",
+    "\n",
+    "area1:float = circle_area(radius=1000)\n",
+    "print(f\"圓面積是:{area1:.2f}\")"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
