--- a/lesson7/lesson7_1.ipynb
+++ b/lesson7/lesson7_1.ipynb
@@ -77,9 +77,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "圓面積是:31415.93\n",
+      "圓面積是:3141592.60\n"
+     ]
+    }
+   ],
    "source": [
     "def circle_area(radius:float) -> float:\n",
     "    PI:float = 3.1415926\n",
@@ -90,6 +99,66 @@
     "\n",
     "area1:float = circle_area(radius=1000)\n",
     "print(f\"圓面積是:{area1:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========猜數字遊戲=========\n",
+      "\n",
+      "10\n",
+      "猜數字範圍1~100:10\n",
+      "賓果!猜對了, 答案是:10\n",
+      "您猜了1次\n",
+      "========猜數字遊戲=========\n",
+      "\n",
+      "33\n",
+      "猜數字範圍1~100:33\n",
+      "賓果!猜對了, 答案是:33\n",
+      "您猜了1次\n",
+      "遊戲結束!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import pyinputplus as pyip\n",
+    "\n",
+    "while(True):\n",
+    "    min = 1\n",
+    "    max = 100\n",
+    "    count = 0\n",
+    "    target = random.randint(min,max)\n",
+    "    print(\"========猜數字遊戲=========\\n\")\n",
+    "    print(target)\n",
+    "    while(True):\n",
+    "        keyin = pyip.inputInt(f\"猜數字範圍{min}~{max}:\",min=min,max=max)\n",
+    "        print(keyin)\n",
+    "        count += 1\n",
+    "        if keyin == target:\n",
+    "            print(f'賓果!猜對了, 答案是:{target}')\n",
+    "            print(f'您猜了{count}次')\n",
+    "            break\n",
+    "        elif (keyin > target):\n",
+    "            print(\"再小一點\")\n",
+    "            max = keyin - 1\n",
+    "        elif (keyin < target):\n",
+    "            print(\"再大一點\")\n",
+    "            min = keyin + 1\n",
+    "        print(f\"您已經猜了{count}次\")\n",
+    "    is_again:str = input(\"請問還要繼續嗎(y,n)?\")\n",
+    "    if not is_again == 'y':\n",
+    "        break\n",
+    "    \n",
+    "    \n",
+    "        \n",
+    "print(\"遊戲結束!\") "
    ]
   }
  ],
