--- a/lesson7/lesson7_3.ipynb
+++ b/lesson7/lesson7_3.ipynb
@@ -71,6 +71,81 @@
     "#引數名稱呼叫,可以不依照順序\n",
     "menu(dessert='蛋糕',wine='白酒',entree='牛排')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "餐前酒:白酒\n",
+      "主菜:牛排\n",
+      "甜點:蛋糕\n"
+     ]
+    }
+   ],
+   "source": [
+    "#混合呼叫\n",
+    "#前面一定是引數值呼叫\n",
+    "#後面引數名稱呼叫\n",
+    "#引數名稱呼叫後,後面全部都要用引數名稱呼叫\n",
+    "\n",
+    "menu('白酒',dessert='蛋糕',entree='牛排')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#參數有default value一定要寫在最後\n",
+    "def menu1(wine:str,entree:str,dessert:str='奶昔'):\n",
+    "    print(f\"餐前酒:{wine}\")\n",
+    "    print(f\"主菜:{entree}\")\n",
+    "    print(f\"甜點:{dessert}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "餐前酒:白酒\n",
+      "主菜:牛排\n",
+      "甜點:奶昔\n"
+     ]
+    }
+   ],
+   "source": [
+    "menu1('白酒','牛排')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "餐前酒:白酒\n",
+      "主菜:牛排\n",
+      "甜點:蛋糕\n"
+     ]
+    }
+   ],
+   "source": [
+    "menu1('白酒','牛排',dessert='蛋糕')"
+   ]
   }
  ],
  "metadata": {
