--- a/lesson8/lesson8_2.ipynb
+++ b/lesson8/lesson8_2.ipynb
@@ -44,6 +44,29 @@
     "    scores.append(random.randint(50,100)) #利用list的實體方法append()\n",
     "scores"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[67, 86, 71, 95, 63]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#list comprehension -> 快速建立list -> [for in]\n",
+    "\n",
+    "scores:list[int] = [random.randint(50,100) for _ in range(5)]\n",
+    "scores"
+   ]
   }
  ],
  "metadata": {
