--- a/lesson8/lesson8_3.ipynb
+++ b/lesson8/lesson8_3.ipynb
@@ -2,14 +2,109 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pydantic import RootModel\n",
     "class Scores(RootModel):\n",
-    "    pass"
+    "    root: list[int]\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        return iter(self.root)\n",
+    "\n",
+    "    def __getitem__(self, item):\n",
+    "        return self.root[item]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n",
+      "90\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores = Scores(root=[80, 90, 100])#初始化建立實體\n",
+    "for item in scores:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(80, 90, 100)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores[0], scores[1], scores[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n",
+      "90\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores = Scores.model_validate([80, 90, 100]) #class 的method()建立實體\n",
+    "for item in scores:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(80, 90, 100)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores[0], scores[1], scores[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
