--- a/blue/blue1.ipynb
+++ b/blue/blue1.ipynb
@@ -24,28 +24,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1月是春天\n"
+      "3月是春天\n"
      ]
     }
    ],
    "source": [
     "#判斷四季\n",
     "month=int(input('請輸入月份:'))\n",
-    "if(1<=month<=3):\n",
+    "if(month<3 or month==12):\n",
+    "    print(str(month)+\"月是冬天\")\n",
+    "elif(month<6):\n",
     "    print(str(month)+\"月是春天\")\n",
-    "elif(4<=month<=6):\n",
+    "elif(month<9):\n",
     "    print(str(month)+\"月是夏天\")\n",
-    "elif(7<=month<=9):\n",
-    "    printstr((month)+\"月是秋天\")\n",
-    "elif(10<=month<=12):\n",
-    "    print(str(month)+\"月是冬天\")    \n",
+    "elif(month<12):\n",
+    "    print(str(month)+\"月是秋天\")    \n",
     "else:\n",
     "    print('不在範圍內')"
    ]
