--- a/blue/blue1.ipynb
+++ b/blue/blue1.ipynb
@@ -24,30 +24,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3月是春天\n"
+      "不在範圍內\n"
      ]
     }
    ],
    "source": [
     "#判斷四季\n",
     "month=int(input('請輸入月份:'))\n",
-    "if(month<3 or month==12):\n",
+    "if(1<=month<3 or month==12):\n",
     "    print(str(month)+\"月是冬天\")\n",
-    "elif(month<6):\n",
+    "elif(3<=month<6):\n",
     "    print(str(month)+\"月是春天\")\n",
-    "elif(month<9):\n",
+    "elif(6<=month<9):\n",
     "    print(str(month)+\"月是夏天\")\n",
-    "elif(month<12):\n",
+    "elif(9<=month<12):\n",
     "    print(str(month)+\"月是秋天\")    \n",
     "else:\n",
     "    print('不在範圍內')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "姓名:徐xx, BMI:24.62,過重\n",
+      "姓名:王xx, BMI:15.94,體重過輕\n",
+      "姓名:張xx, BMI:23.29,正常範圍\n"
+     ]
+    }
+   ],
+   "source": [
+    "source:list[dict] = [\n",
+    "{'name':'徐xx','height':178,'weight':78},\n",
+    "{'name':'王xx','height':168,'weight':45},\n",
+    "{'name':'張xx','height':183,'weight':78},\n",
+    "]\n",
+    "\n",
+    "for data in source:\n",
+    "    bmi:float = data['weight'] / (data['height'] / 100) ** 2 \n",
+    "    if bmi<18.5:\n",
+    "        x=\"體重過輕\"\n",
+    "    elif bmi<24:\n",
+    "        x=\"正常範圍\"\n",
+    "    elif bmi<27 :\n",
+    "        x=\"過重\"\n",
+    "    elif bmi<30 :\n",
+    "        x=\"輕度肥胖\"\n",
+    "    elif bmi<35 :\n",
+    "        x=\"中度肥胖\"\n",
+    "    else :\n",
+    "        x=\"重度肥胖\"\n",
+    "    print(f'姓名:{data[\"name\"]}, BMI:{bmi:.2f},{x}')\n"
    ]
   }
  ],
