--- a/blue/blue1.ipynb
+++ b/blue/blue1.ipynb
@@ -221,6 +221,64 @@
     "    print(f'姓名:{Data.name}, 身高:{Data.height}公分, 體重:{Data.weight}公斤, BMI:{Data.bmi}, {Data.msg}')\n",
     "    print(\"===========================================================\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "徐xx 24.62 過重\n",
+      "王xx 26.57 過重\n",
+      "張xx 23.29 正常範圍\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pydantic import BaseModel,RootModel\n",
+    "names = [\n",
+    "    {'name':'徐xx','height':178,'weight':78},\n",
+    "    {'name':'王xx','height':168,'weight':75},\n",
+    "    {'name':'張xx','height':183,'weight':78},\n",
+    "]\n",
+    "class data(BaseModel):\n",
+    "    name:str\n",
+    "    height:int\n",
+    "    weight:int\n",
+    "    bmi:float=0\n",
+    "    bmi_:str=\"\"\n",
+    "    \n",
+    "    def f(self):\n",
+    "        self.bmi=self.weight/(self.height/100)**2\n",
+    "        if self.bmi<18.5:\n",
+    "            self.bmi_=\"體重過輕\"\n",
+    "        elif self.bmi<24:\n",
+    "            self.bmi_=\"正常範圍\"\n",
+    "        elif self.bmi<27 :\n",
+    "            self.bmi_=\"過重\"\n",
+    "        elif self.bmi<30 :\n",
+    "            self.bmi_=\"輕度肥胖\"\n",
+    "        elif self.bmi<35 :\n",
+    "            self.bmi_=\"中度肥胖\"\n",
+    "        else :\n",
+    "            self.bmi_=\"重度肥胖\"\n",
+    "        \n",
+    "\n",
+    "class AllData(RootModel):\n",
+    "    root:list[data]\n",
+    "    def __iter__(self):\n",
+    "        return iter(self.root)\n",
+    "    def __getitem__(self,indext):\n",
+    "        return self.root[indext]\n",
+    "\n",
+    "guy:AllData=AllData.model_validate(names)\n",
+    "for i in guy:\n",
+    "    i.f()\n",
+    "    print(f\"{i.name} {i.bmi:.2f} {i.bmi_}\")"
+   ]
   }
  ],
  "metadata": {
