--- a/lesson14/lesson14_1.ipynb
+++ b/lesson14/lesson14_1.ipynb
@@ -2,15 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_15535/2145716562.py:26: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "/tmp/ipykernel_15535/1957919232.py:26: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  axes.set_xticklabels(subjects,fontproperties=font)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "學生1:\n",
+      "0 78\n",
+      "學生2:\n",
+      "0 90\n",
+      "學生1:\n",
+      "1 80\n",
+      "學生2:\n",
+      "1 75\n",
+      "學生1:\n",
+      "2 75\n",
+      "學生2:\n",
+      "2 98\n",
+      "學生1:\n",
+      "3 85\n",
+      "學生2:\n",
+      "3 65\n",
+      "學生1:\n",
+      "4 92\n",
+      "學生2:\n",
+      "4 75\n"
      ]
     },
     {
@@ -55,6 +81,12 @@
     "axes.set_xlabel(\"科目\",fontproperties=font)\n",
     "axes.set_ylabel(\"分數\",fontproperties=font)\n",
     "axes.legend(prop=font)\n",
+    "xtick_nums = axes.get_xticks()\n",
+    "for index in range(len(xtick_nums)):\n",
+    "    print(\"學生1:\")\n",
+    "    print(xtick_nums[index],scores1[index])\n",
+    "    print(\"學生2:\")\n",
+    "    print(xtick_nums[index],scores2[index])\n",
     "plt.show()"
    ]
   }
