--- a/lesson16/lesson16_3.ipynb
+++ b/lesson16/lesson16_3.ipynb
@@ -1804,6 +1804,60 @@
    "source": [
     "df3.values"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1110912"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([1110912, 11108], dtype=object)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([1110912, 11108, '亞泥', '水泥工業', 7069221], dtype=object)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1110912, 11108, '亞泥', '水泥工業', 7069221],\n",
+       "       [1110912, 11108, '幸福', '水泥工業', 390053],\n",
+       "       [1110912, 11108, '信大', '水泥工業', 478276],\n",
+       "       [1110912, 11108, '東泥', '水泥工業', 176935],\n",
+       "       [1110912, 11108, '大飲', '食品工業', 38696]], dtype=object)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#ndarray選取方法\n",
+    "display(df3.values[0,0])\n",
+    "display(df3.values[0,[0,1]])\n",
+    "display(df3.values[0,:])\n",
+    "display(df3.values[:5,:])#前5列,所有欄"
+   ]
   }
  ],
  "metadata": {
