--- a/lesson19/lesson19_1.ipynb
+++ b/lesson19/lesson19_1.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_20865/2428534646.py:8: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df3[['年底人口數','人口密度']] = df3[['年底人口數','人口密度']].replace('… ','0')\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -83,22 +95,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>364</th>\n",
-       "      <td>106</td>\n",
-       "      <td>金門縣烏坵鄉</td>\n",
-       "      <td>685</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>571</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>365</th>\n",
-       "      <td>106</td>\n",
-       "      <td>連江縣南竿鄉</td>\n",
-       "      <td>7544</td>\n",
-       "      <td>10.4</td>\n",
-       "      <td>725</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>366</th>\n",
        "      <td>106</td>\n",
        "      <td>連江縣北竿鄉</td>\n",
@@ -122,9 +118,25 @@
        "      <td>3.8</td>\n",
        "      <td>356</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>369</th>\n",
+       "      <td>106</td>\n",
+       "      <td>東沙群島</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.38</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>370</th>\n",
+       "      <td>106</td>\n",
+       "      <td>南沙群島</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.5045</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>368 rows × 5 columns</p>\n",
+       "<p>370 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -135,16 +147,16 @@
        "4    106  新北市永和區  222585   5.7138  38956\n",
        "5    106  新北市新莊區  416524  19.7383  21102\n",
        "..   ...     ...     ...      ...    ...\n",
-       "364  106  金門縣烏坵鄉     685      1.2    571\n",
-       "365  106  連江縣南竿鄉    7544     10.4    725\n",
        "366  106  連江縣北竿鄉    2360      9.9    238\n",
        "367  106  連江縣莒光鄉    1624      4.7    346\n",
        "368  106  連江縣東引鄉    1352      3.8    356\n",
+       "369  106    東沙群島       0     2.38      0\n",
+       "370  106    南沙群島       0   0.5045      0\n",
        "\n",
-       "[368 rows x 5 columns]"
+       "[370 rows x 5 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,8 +168,50 @@
     "df1.columns = df1.iloc[0]\n",
     "df2 = df1.drop(index=0)\n",
     "df3 = df2.dropna()\n",
-    "df4 = df3.drop(index=[369, 370])\n",
-    "df4"
+    "#print(df3)\n",
+    "df3[['年底人口數','人口密度']] = df3[['年底人口數','人口密度']].replace('… ','0')\n",
+    "df3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_20865/4265169316.py:13: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df3['縣市'] = df3['區域別'].map(slice_str)\n",
+      "/tmp/ipykernel_20865/4265169316.py:14: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df3['鄉鎮區'] = df3['區域別'].map(slice_str1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def slice_str(value:str)->str:\n",
+    "    if len(value) == 6:\n",
+    "        return value[:3]\n",
+    "    else:\n",
+    "        return value\n",
+    "    \n",
+    "def slice_str1(value:str)->str:\n",
+    "    if len(value) == 6:\n",
+    "        return value[-3:]\n",
+    "    else:\n",
+    "        return value\n",
+    "\n",
+    "df3['縣市'] = df3['區域別'].map(slice_str)\n",
+    "df3['鄉鎮區'] = df3['區域別'].map(slice_str1)"
    ]
   },
   {
@@ -187,6 +241,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>統計年</th>\n",
+       "      <th>區域別</th>\n",
        "      <th>年底人口數</th>\n",
        "      <th>土地面積</th>\n",
        "      <th>人口密度</th>\n",
@@ -198,6 +253,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>106</td>\n",
+       "      <td>新北市板橋區</td>\n",
        "      <td>551480</td>\n",
        "      <td>23.1373</td>\n",
        "      <td>23835</td>\n",
@@ -207,6 +263,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>106</td>\n",
+       "      <td>新北市三重區</td>\n",
        "      <td>387484</td>\n",
        "      <td>16.317</td>\n",
        "      <td>23747</td>\n",
@@ -216,6 +273,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>106</td>\n",
+       "      <td>新北市中和區</td>\n",
        "      <td>413590</td>\n",
        "      <td>20.144</td>\n",
        "      <td>20532</td>\n",
@@ -225,6 +283,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>106</td>\n",
+       "      <td>新北市永和區</td>\n",
        "      <td>222585</td>\n",
        "      <td>5.7138</td>\n",
        "      <td>38956</td>\n",
@@ -234,6 +293,7 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>106</td>\n",
+       "      <td>新北市新莊區</td>\n",
        "      <td>416524</td>\n",
        "      <td>19.7383</td>\n",
        "      <td>21102</td>\n",
@@ -248,28 +308,12 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>364</th>\n",
-       "      <td>106</td>\n",
-       "      <td>685</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>571</td>\n",
-       "      <td>金門縣</td>\n",
-       "      <td>烏坵鄉</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>365</th>\n",
-       "      <td>106</td>\n",
-       "      <td>7544</td>\n",
-       "      <td>10.4</td>\n",
-       "      <td>725</td>\n",
-       "      <td>連江縣</td>\n",
-       "      <td>南竿鄉</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>366</th>\n",
        "      <td>106</td>\n",
+       "      <td>連江縣北竿鄉</td>\n",
        "      <td>2360</td>\n",
        "      <td>9.9</td>\n",
        "      <td>238</td>\n",
@@ -279,6 +323,7 @@
        "    <tr>\n",
        "      <th>367</th>\n",
        "      <td>106</td>\n",
+       "      <td>連江縣莒光鄉</td>\n",
        "      <td>1624</td>\n",
        "      <td>4.7</td>\n",
        "      <td>346</td>\n",
@@ -288,32 +333,53 @@
        "    <tr>\n",
        "      <th>368</th>\n",
        "      <td>106</td>\n",
+       "      <td>連江縣東引鄉</td>\n",
        "      <td>1352</td>\n",
        "      <td>3.8</td>\n",
        "      <td>356</td>\n",
        "      <td>連江縣</td>\n",
        "      <td>東引鄉</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>369</th>\n",
+       "      <td>106</td>\n",
+       "      <td>東沙群島</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.38</td>\n",
+       "      <td>0</td>\n",
+       "      <td>東沙群島</td>\n",
+       "      <td>東沙群島</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>370</th>\n",
+       "      <td>106</td>\n",
+       "      <td>南沙群島</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.5045</td>\n",
+       "      <td>0</td>\n",
+       "      <td>南沙群島</td>\n",
+       "      <td>南沙群島</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>368 rows × 6 columns</p>\n",
+       "<p>370 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "0    統計年   年底人口數     土地面積   人口密度   縣市  鄉鎮區\n",
-       "1    106  551480  23.1373  23835  新北市  板橋區\n",
-       "2    106  387484   16.317  23747  新北市  三重區\n",
-       "3    106  413590   20.144  20532  新北市  中和區\n",
-       "4    106  222585   5.7138  38956  新北市  永和區\n",
-       "5    106  416524  19.7383  21102  新北市  新莊區\n",
-       "..   ...     ...      ...    ...  ...  ...\n",
-       "364  106     685      1.2    571  金門縣  烏坵鄉\n",
-       "365  106    7544     10.4    725  連江縣  南竿鄉\n",
-       "366  106    2360      9.9    238  連江縣  北竿鄉\n",
-       "367  106    1624      4.7    346  連江縣  莒光鄉\n",
-       "368  106    1352      3.8    356  連江縣  東引鄉\n",
+       "0    統計年     區域別   年底人口數     土地面積   人口密度    縣市   鄉鎮區\n",
+       "1    106  新北市板橋區  551480  23.1373  23835   新北市   板橋區\n",
+       "2    106  新北市三重區  387484   16.317  23747   新北市   三重區\n",
+       "3    106  新北市中和區  413590   20.144  20532   新北市   中和區\n",
+       "4    106  新北市永和區  222585   5.7138  38956   新北市   永和區\n",
+       "5    106  新北市新莊區  416524  19.7383  21102   新北市   新莊區\n",
+       "..   ...     ...     ...      ...    ...   ...   ...\n",
+       "366  106  連江縣北竿鄉    2360      9.9    238   連江縣   北竿鄉\n",
+       "367  106  連江縣莒光鄉    1624      4.7    346   連江縣   莒光鄉\n",
+       "368  106  連江縣東引鄉    1352      3.8    356   連江縣   東引鄉\n",
+       "369  106    東沙群島       0     2.38      0  東沙群島  東沙群島\n",
+       "370  106    南沙群島       0   0.5045      0  南沙群島  南沙群島\n",
        "\n",
-       "[368 rows x 6 columns]"
+       "[370 rows x 7 columns]"
       ]
      },
      "execution_count": 3,
@@ -322,109 +388,7 @@
     }
    ],
    "source": [
-    "df4['縣市'] = df4['區域別'].str[:3]\n",
-    "df4['鄉鎮區'] = df4['區域別'].str[-3:]\n",
-    "#df4['區域別'].str.replace('連江縣','台灣')\n",
-    "df5 = df4.drop(columns='區域別')\n",
-    "df5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "連江縣\n",
-      "東引鄉\n",
-      "台灣東引鄉\n"
-     ]
-    }
-   ],
-   "source": [
-    "name = '連江縣東引鄉'\n",
-    "#str是sequence資料,可以使用subscript\n",
-    "print(name[:3])\n",
-    "print(name[-3:])\n",
-    "#str的實體方法\n",
-    "print(name.replace('連江縣','台灣'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0      2023\n",
-       "1      2023\n",
-       "2      2023\n",
-       "3      2023\n",
-       "4      2023\n",
-       "       ... \n",
-       "360    2023\n",
-       "361    2023\n",
-       "362    2023\n",
-       "363    2023\n",
-       "364    2023\n",
-       "Length: 365, dtype: int32"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0       1\n",
-       "1       1\n",
-       "2       1\n",
-       "3       1\n",
-       "4       1\n",
-       "       ..\n",
-       "360    12\n",
-       "361    12\n",
-       "362    12\n",
-       "363    12\n",
-       "364    12\n",
-       "Length: 365, dtype: int32"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0       1\n",
-       "1       2\n",
-       "2       3\n",
-       "3       4\n",
-       "4       5\n",
-       "       ..\n",
-       "360    27\n",
-       "361    28\n",
-       "362    29\n",
-       "363    30\n",
-       "364    31\n",
-       "Length: 365, dtype: int32"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "series1 = pd.Series(pd.date_range(start='2023-01-01',end='2023-12-31',freq='D'))\n",
-    "#pd.date_range(start='2023-01-01',end='2023-12-31',freq='W')\n",
-    "display(series1.dt.year)\n",
-    "display(series1.dt.month)\n",
-    "display(series1.dt.day)"
+    "df3"
    ]
   }
  ],
