--- a/lesson21/lesson21_1.ipynb
+++ b/lesson21/lesson21_1.ipynb
@@ -2,16 +2,82 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**學習演算法的步驟：**\n",
+      "\n",
+      "**1. 基礎知識：**\n",
+      "\n",
+      "* 了解基本的資料結構，例如陣列、連結串列和堆疊。\n",
+      "* 熟悉數學概念，例如複雜度分析和機率。\n",
+      "\n",
+      "**2. 線性演算法：**\n",
+      "\n",
+      "* 了解循序搜尋、二元搜尋和泡沫排序等線性演算法。\n",
+      "* 掌握其時間複雜度和空間複雜度。\n",
+      "\n",
+      "**3. 非線性演算法：**\n",
+      "\n",
+      "* 學習組合問題，例如背包問題和分區問題。\n",
+      "* 探討遞迴演算法，例如歸併排序和快速排序。\n",
+      "\n",
+      "**4. 圖形演算法：**\n",
+      "\n",
+      "* 了解圖形資料結構，例如鄰接清單和鄰接矩陣。\n",
+      "* 學習最短路徑演算法，例如 Dijkstra 演算法和 Floyd-Warshall 演算法。\n",
+      "\n",
+      "**5. 動態規劃：**\n",
+      "\n",
+      "* 了解動態規劃的原理，例如 Fibonacci 數列和最長共同子序列。\n",
+      "* 掌握自上而下和自下而上的方法。\n",
+      "\n",
+      "**6. 近似演算法：**\n",
+      "\n",
+      "* 探討 NP 完全問題，例如背包問題和旅行推銷員問題。\n",
+      "* 了解逼近演算法和啟發式演算法，例如貪心演算法和局部搜尋。\n",
+      "\n",
+      "**學習資源：**\n",
+      "\n",
+      "**課程：**\n",
+      "\n",
+      "* Coursera：演算法 第 1 部分和第 2 部分\n",
+      "* edX：演算法（MIT）\n",
+      "\n",
+      "**書籍：**\n",
+      "\n",
+      "* 《演算法導論》（Thomas Cormen 等人著）\n",
+      "* 《演算法與資料結構》（Michael Goodrich 和 Roberto Tamassia 著）\n",
+      "\n",
+      "**網站：**\n",
+      "\n",
+      "* LeetCode\n",
+      "* HackerRank\n",
+      "* CodeChef\n",
+      "\n",
+      "**建議事項：**\n",
+      "\n",
+      "* 勤加練習，解決大量的演算法問題。\n",
+      "* 分析不同的演算法，比較其時間和空間複雜度。\n",
+      "* 參加編程競賽和挑戰，以測試您的技能。\n",
+      "* 與其他演算法愛好者互動，討論和學習。\n"
+     ]
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv\n",
     "import google.generativeai as genai\n",
     "import os\n",
     "load_dotenv()\n",
     "\n",
-    "genai.configure(api_key=os.environ['Gemini_API_KEY'])"
+    "genai.configure(api_key=os.environ['Gemini_API_KEY'])\n",
+    "model = genai.GenerativeModel('gemini-pro')\n",
+    "response = model.generate_content(\"我想要學習 演算法\")\n",
+    "print(response.text)"
    ]
   }
  ],
